k8s_examples/Deploy_autoscaling.yaml
apiVersion : apps/v1
kind: Deployment 
metadata: 
  name: deploy1-autoscaling
  labels:
   env: prod
   owner: valera
   app: k8s_application
spec: 
  replicas: 4
  selector: 
    matchLabels: 
        project: mossad
  template: 
    metadata:
      labels: 
        project: mossad
    spec:
      containers: 
        - name: web-mossad
          image: saimonphoenix/k8sphp
          ports:
           - containerPort: 80
