k8s_examples/pod-myapp.yaml
apiVersion : v1
kind: Pod
metadata:
   name: test1
   labels: 
      env   : prod
      app   : main
      tier  : frontend
      owner : Valera
spec:
   containers: 
    - name : container-test
      image: nginx:latest
      

    - name : container-api
      image: tomcat:8.5.38
      ports: 
          - containerPort: 8080
