k8s_examples/pod-myweb-ver1.yaml
apiVersion : v1
kind: Pod
metadata:
   name: test 
spec:
   containers: 
      - name : container-test
        image: nginx:latest
        ports: 
          - containerPort: 80
