k8s_examples/pod-myweb-ver2.yaml
apiVersion : v1
kind: Pod
metadata:
   name: test1
   labels: 
      env   : prod
      app   : main
      tier  : frontend
      owner : Valera
spec:
   containers: 
    - name : container-test
      image: nginx:latest
      ports: 
          - containerPort: 80
