k8s_examples/Service-loadBalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp   # Service will look for those PODS Labels!!
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: servicetest
        image: saimonphoenix/k8sphp
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  selector:
    app: myapp     #Selecting PODS with those Labels
  ports:
  - name: app-listener
    protocol: TCP
    port: 80       #Port on loadbalancer
    targetPort: 80 #Port on Pod
  type: LoadBalancer
