k8s_examples/Service1-loadbalancer-multi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: container
        image: saimonphoenix/k8sphp
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      
      - name: container1
        image: tomcat
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
  - name: listener
    protocol: TCP 
    port: 80
    targetPort: 80
    

  - name: listener1
    protocol: TCP
    port: 8888
    targetPort: 8080
