k8s_examples/Service2-loadbalancer-autoscaling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoscaling
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: web-auto
        image: saimonphoenix/k8sphp
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-autoscaling
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
  - name: app-listener
    protocol: TCP
    port: 80
    targetPort: 80
