k8s_examples/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myapp
spec:
  rules:
  - host: valerdsfdsfs.dfdsf.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: main
            port: 
              number: 80
  - host: valera.dasda.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web1
            port: 
              number: 80
